# comp2560

./: .ignore  policy.conf  solver.py
parse-policy/: 500-3.py  500-4.py  Cargo.toml  additional.py  build.rs  data.py  po-2000.py  po.py  temp.py
parse-policy/benches/: rust.rs  z3.rs
parse-policy/data/: 1000.json  200.json  400.json  600.json  800.json  graph.py
parse-policy/src/: ebitmap.rs  lib.rs  main.rs  model.rs  py.rs
parse-policy/src/c/: lex.yy.c  y.tab.c  y.tab.h
parse-policy/src/c/libsepol/src/: Makefile
