[package]
name = "parse-policy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tempfile = "3.8.0"

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
bindgen = "0.68.1"
fs_extra = "1.3.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "z3"
harness = false

[[bench]]
name = "rust"
harness = false
